--- a/style.css
+++ b/style.css
@@ -88,3 +88,14 @@ p {
   font-size: 14px;
   margin-top: 10px;
 }
+
+.read-more {
+  margin-top: 10px;
+  color: #e50914;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.read-more:hover {
+  text-decoration: underline;
+}
