--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   align-items: center;
   min-height: 100vh;
   line-height: 1.6;
+  transition: background 1s ease;
 }
 
 @keyframes gradientBG {
@@ -32,14 +33,14 @@ body {
   overflow: hidden;
   border-radius: 40px;
   box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5);
-  background: rgba(18, 24, 38, 0.5);
+  background: rgba(18, 24, 38, 0.2); /* Уменьшена непрозрачность для лучшего эффекта */
   backdrop-filter: blur(10px);
 }
 
 .welcome {
   text-align: center;
   padding: 40px 24px;
-  background: rgba(18, 24, 38, 0.7);
+  background: rgba(18, 24, 38, 0.4); /* Уменьшена непрозрачность */
   backdrop-filter: blur(5px);
 }
 
@@ -62,7 +63,7 @@ header {
   justify-content: center;
   padding: 24px 16px;
   position: relative;
-  background: rgba(18, 24, 38, 0.6);
+  background: rgba(18, 24, 38, 0.4); /* Уменьшена непрозрачность */
   backdrop-filter: blur(5px);
 }
 
@@ -200,7 +201,7 @@ main {
 }
 
 .info {
-  padding: 0 20px 20px; /* Изменен верхний отступ с 10px на 0, чтобы уменьшить расстояние после заголовка */
+  padding: 0 20px 20px;
   width: 100%;
   box-sizing: border-box;
   border-radius: 0 0 16px 16px;
